-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.7.1, Qt Creator 2.8.0-rc
-
None
-
Windows, Linux
-
29597d36d253be8e4032e1cfa02af8cf9f9419cd
- Open 2 instances of Creator
- Close the first one
- Execute qtcreator -client foo.cpp
- A new instance is started instead of opening in the previous one. This is true even if -pid is specified.
firstPeer is locked by the first instance.
When the second instance is started, it the file is already locked, so it can't lock it again. When qtcreator -client is started, isClient() returns false because the file is not locked anymore, so a new instance is started.