Truly support multiple instances

Qt*Single*Application is not designed to support multiple instances.

A shared memory is used to list all pids of running instances.

When an instance gracefully quits, it removes its own entry
and every other entry which is not currently running
(i.e. crashed instances).

Running qtcreator -client opens the first running instance in this list.

Running qtcreator -client -pid works as before.

Task-number: QTCREATORBUG-9458
Change-Id: I25d22a81097a224e9e45af093efa2ef2eccf6cb7
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Daniel Teske <daniel.teske@digia.com>